--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -350,3 +350,16 @@ audio::-webkit-media-controls-panel {
   background-color: teal;
 }
 
+.mini-visualizer {
+  position: absolute;
+  top: 20px;
+  right: 10px;
+  width: 200px;
+  height: 30px;
+  background-color: transparent;
+  z-index: 1;
+}
+.song-card {
+  position: relative;
+}
+
